# numpy-curso

./: 1-fundamentos.ipynb  10-split.ipynb  11-pesquisar.ipynb  2-dimensao.ipynb  3-indexacao.ipynb  5-funcoes.ipynb  README.md  projeto1.py  projeto2.py  pyproject.toml
dados/: campeonato_futebol.xlsx  campeonato_futebol2.xlsx  produtos.csv  receitas.json  vendas_categoria.csv
datasets/: compras.csv  compras.xlsx  lj_compras.csv  lj_compras.xlsx  lj_lojas.csv  lj_lojas.xlsx  lj_produtos.csv  lj_produtos.xlsx  lojas.csv  lojas.xlsx  produtos.csv  produtos.xlsx
numpy/: 1-fundamentos.ipynb  12-final.ipynb  4-fatiamento.ipynb  5-funcoes.ipynb  6-copy.ipynb  7-reshape.ipynb  8-interacao.ipynb  9-concatenar.ipynb  projeto1.py
pandas/: 1-series.ipynb  10-importar_json.ipynb  11-analisa_json.ipynb  12-db.ipynb  13-analise_db.ipynb  2-dataframe.ipynb  3-analise.ipynb  4-operacoes.ipynb  5-importar_csv.ipynb  6-analise_csv.ipynb  7-criar_planilha.ipynb  8-analise_planilha.ipynb  9-cria_json.ipynb  ecommerce.db
projetos/: 1-gera_dataset.py  2-visualizando_bt.py  5-tb_dinamica.py  adicionando_linhas.py  volume_dados.py
