[project]
name = "numpy-curso"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcelo Santos",email = "rocha.mer21@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas (>=2.3.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "numpy_curso", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
