[project]
name = "numpy-curso"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcelo Santos",email = "rocha.mer21@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.1,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "names (>=0.3.0,<0.4.0)"
]

[tool.poetry]
packages = [{include = "numpy_curso", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
